doc-qc-styling: fix vertical alignment of checkboxes on section document qc

--- a/web-client/src/styles/overrides.scss
+++ b/web-client/src/styles/overrides.scss
@@ -369,3 +369,7 @@ input[type='file']::-webkit-file-upload-button {
 .border-none {
   border: none;
 }
+
+td.message-select-control {
+  vertical-align: top;
+}
